# agent-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  run_demo.py
agent/: chat_server.py  crew.py  openai_client.py  tools.py  websocket_server.py
agent/evals/: triage_and_note.yaml
backend/: app.py  models.py  seed.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: agentSocket.ts  index.css  main.tsx  registry.ts
frontend/src/components/: ChartRenderer.tsx  ChatInterface.tsx  ComponentFactory.tsx  WorkflowProgress.tsx
frontend/src/panels/: NotesPanel.tsx
frontend/src/views/: AnalyticsView.tsx  CalendarView.tsx  CustomerDashboard.tsx  EntityDetail.tsx  EntityList.tsx  TimelineView.tsx  TriageBoard.tsx  WorkflowView.tsx
