[project]
name = "agentic-demo"
version = "0.1.0"
description = "Agent-controlled UI demo with FastAPI backend and React frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "openai>=1.3.0",
    "crewai>=0.1.0",
]
